# Nebula-viewer

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py  nebula_client.py  parser.py  routes.py
backend/tests/: test_parser.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  hooks.ts  main.tsx  store.ts  types.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: CodeArea.tsx  ContextMenu.tsx  EmptyState.tsx  Frame.tsx  FrameStream.tsx  GraphCanvas.tsx  Header.tsx  PropertiesPanel.tsx  SchemaSidebar.tsx  SpaceSelector.tsx  TableView.tsx
frontend/src/lib/: color.ts  cytoStyle.ts  exportData.ts  highlight.tsx  ngql.ts  tags.ts
frontend/src/styles/: global.css  tokens.css
